fix: sdg images were stretched on safari

--- a/src/features/sdg/styles/column.module.scss
+++ b/src/features/sdg/styles/column.module.scss
@@ -35,6 +35,7 @@
     max-width: 80px;
     height: auto;
     margin: 0.25rem;
+    object-fit: contain;
   }
 
   p {
