--- a/src/features/sdg/styles/dialog.module.scss
+++ b/src/features/sdg/styles/dialog.module.scss
@@ -24,4 +24,5 @@
   max-width: 80px;
   height: auto;
   margin: 0.25rem;
+  object-fit: contain;
 }
